--- a/Blatt2/1.ipynb
+++ b/Blatt2/1.ipynb
@@ -15,8 +15,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-21T16:12:22.813656Z",
-     "start_time": "2025-10-21T16:12:22.808894Z"
+     "end_time": "2025-10-21T16:42:21.221007Z",
+     "start_time": "2025-10-21T16:42:21.208013Z"
     }
    },
    "cell_type": "code",
@@ -52,14 +52,74 @@
     "                conflicts += 1\n",
     "    return conflicts\n",
     "\n",
-    "def \n",
+    "def mutation(l):\n",
+    "    l[rnd.randrange(0, len(l))] = getr()\n",
+    "\n",
+    "def crossover(l, m):\n",
+    "    schnittpunkt = rnd.randrange(1, len(l))# Zufälliger Punkt (nicht 0, nicht Ende)\n",
+    "    # Neues Kind = linker Teil von l + rechter Teil von m\n",
+    "    kind = l[:schnittpunkt] + m[schnittpunkt:]\n",
+    "    return kind\n",
+    "\n",
+    "\n",
+    "def printgenpool(l,evo):\n",
+    "    print(f\"--- {evo} ---\")\n",
+    "    i = 1\n",
+    "    for x in l:\n",
+    "        print(f\"{i}: {x}::{zielfunktion(x)}\")\n",
+    "        i+=1\n",
+    "\n",
+    "def selection(genpool):\n",
+    "    # Zwei zufällige Eltern wählen\n",
+    "    p1 = rnd.choice(genpool)\n",
+    "    p2 = rnd.choice(genpool)\n",
+    "    # Neues Kind erzeugen\n",
+    "    child = crossover(p1, p2)\n",
+    "    # Mutieren\n",
+    "    mutation(child)\n",
+    "    # Kind zur Population hinzufügen\n",
+    "    genpool.append(child)\n",
+    "\n",
+    "genpool = [getrn(),getrn()]\n",
+    "evolution = 0\n",
+    "\n",
+    "def completerun():\n",
+    "    selection(genpool)\n",
+    "    #printgenpool(genpool,evolution)\n",
+    "    killBad()\n",
+    "\n",
+    "def findbest(genpool):\n",
+    "    highest = 50\n",
+    "    node = 0\n",
+    "    for g in genpool:\n",
+    "        if zielfunktion(g) < highest:\n",
+    "            highest = zielfunktion(g)\n",
+    "            node = g\n",
+    "    print(f\"{node}: {zielfunktion(node)}\")\n",
+    "\n",
+    "def findworst(genpool):\n",
+    "    highest = 0\n",
+    "    node = 0\n",
+    "    for g in genpool:\n",
+    "        if zielfunktion(g) > highest:\n",
+    "            highest = zielfunktion(g)\n",
+    "            node = g\n",
+    "    return node\n",
+    "\n",
+    "def killBad():\n",
+    "    if len(genpool) >= 20:\n",
+    "        while len(genpool) > 20:\n",
+    "            genpool.remove(findworst(genpool))\n",
+    "\n",
     "\n",
     "#---- start --------\n",
     "\n",
-    "startnode = getrn()\n",
-    "#print(startnode)\n",
-    "#printLoesung(startnode)\n",
-    "print(f\"lösung {zielfunktion(startnode)}\")\n"
+    "printgenpool(genpool,evolution)\n",
+    "for i in range(100):\n",
+    "\n",
+    "    evolution += 1\n",
+    "    completerun()\n",
+    "findbest(genpool)"
    ],
    "id": "3e781fbd96509a32",
    "outputs": [
@@ -67,20 +127,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[7, 5, 8, 7, 8, 6, 4, 3]\n",
-      "1: 7\n",
-      "2: 5\n",
-      "3: 8\n",
-      "4: 7\n",
-      "5: 8\n",
-      "6: 6\n",
-      "7: 4\n",
-      "8: 3\n",
-      "lösung 11\n"
+      "--- 0 ---\n",
+      "1: [4, 5, 4, 6, 2, 7, 6, 1]::8\n",
+      "2: [3, 6, 4, 1, 6, 2, 6, 3]::7\n",
+      "[3, 7, 4, 2, 5, 2, 6, 1]: 2\n"
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 48
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-21T16:42:25.561793Z",
+     "start_time": "2025-10-21T16:42:25.559220Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "120136e4c574a0a4",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -88,7 +155,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "f05dcb5e1cd28c4a"
+   "id": "e2f35f2e95c6254f"
   }
  ],
  "metadata": {
