implementation of counter

--- a/Blatt3/Games 02 AB.ipynb
+++ b/Blatt3/Games 02 AB.ipynb
@@ -1,27 +1,22 @@
 {
  "cells": [
   {
-   "metadata": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "initial_id",
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "(2P) Implementieren Sie den Minimax-Algorithmus (wie in der VL besprochen) am Beispiel Tic Tac Toe in einer Sprache Ihrer Wahl.\n",
-    "\n",
-    "(1P) Ergänzen Sie Ihre Implementierung um alpha-beta-Pruning.\n",
-    "\n",
-    "(1P) Vergleichen Sie die Anzahl der jeweils berechneten Knoten. Überlegen Sie sich dazu ein sinnvolles Szenario.\n",
-    "\n",
-    "Thema: Anwendung Minimax und alpha-beta-Pruning"
-   ],
-   "id": "fa7f6cf50352a349"
+    ""
+   ]
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-01T11:03:20.468942Z",
-     "start_time": "2025-11-01T11:03:20.094544Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "# Tic-Tac-Toe Minimax (sauber)\n",
     "import random as rnd\n",
@@ -101,6 +96,9 @@
     "\n",
     "# Besten Zug für MAX ermitteln\n",
     "def minimax(gamestate):\n",
+    "    alpha = -float('inf')\n",
+    "    beta = float('inf')\n",
+    "\n",
     "    increase_node_count()\n",
     "    best_value = -float('inf')\n",
     "    best_move = None\n",
@@ -124,41 +122,7 @@
     "printTTT(spieldfeld)\n",
     "print(f\"Node count: {node_count}\")\n"
    ],
-   "id": "a7ecbc04e43f679a",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 0 0\n",
-      "0 0 0\n",
-      "2 0 0\n",
-      "\n",
-      "Best Move: 4, Best Score: 0\n",
-      "MAX sollte auf Feld 4 setzen.\n",
-      "---\n",
-      "0 0 0\n",
-      "0 1 0\n",
-      "2 0 0\n",
-      "\n",
-      "Node count: 27657\n"
-     ]
-    }
-   ],
-   "execution_count": 75
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-01T11:03:20.475289Z",
-     "start_time": "2025-11-01T11:03:20.473483Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "id": "372d5ccee987b618",
-   "outputs": [],
-   "execution_count": null
+   "id": "11beb1a0725b04a1"
   }
  ],
  "metadata": {
