alpha beta pruing

--- a/Blatt3/Games 02 AB.ipynb
+++ b/Blatt3/Games 02 AB.ipynb
@@ -2,21 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-11-01T12:37:18.229059Z",
+     "start_time": "2025-11-01T12:37:18.227105Z"
+    }
    },
-   "outputs": [],
    "source": [
     ""
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-01T12:37:18.274954Z",
+     "start_time": "2025-11-01T12:37:18.235766Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# Tic-Tac-Toe Minimax (sauber)\n",
     "import random as rnd\n",
@@ -70,32 +77,44 @@
     "def get_available_moves(gamestate):\n",
     "    return [i for i, cell in enumerate(gamestate) if cell == EMPTY]\n",
     "\n",
-    "# Minimax-Funktionen\n",
-    "def max_move(gamestate):\n",
+    "def max_move(gamestate, alpha, beta):\n",
+    "\n",
+    "    increase_node_count()\n",
     "    if is_terminal(gamestate):\n",
-    "        return utility(gamestate)\n",
+    "        return utility(gamestate), alpha\n",
     "\n",
     "    value = -float('inf')\n",
     "    for move in get_available_moves(gamestate):\n",
     "        new_state = gamestate.copy()\n",
     "        new_state[move] = MAX_PLAYER\n",
-    "        value = max(value, min_move(new_state))\n",
-    "    return value\n",
+    "        child_value, _ = min_move(new_state, alpha, beta)\n",
+    "        value = max(value, child_value)\n",
+    "        alpha = max(alpha, value)\n",
+    "        if alpha >= beta:  # Prune\n",
+    "            break\n",
+    "    return value, alpha\n",
     "\n",
-    "def min_move(gamestate):\n",
+    "\n",
+    "def min_move(gamestate, alpha, beta):\n",
+    "\n",
     "    increase_node_count()\n",
     "    if is_terminal(gamestate):\n",
-    "        return utility(gamestate)\n",
+    "        return utility(gamestate), beta\n",
     "\n",
     "    value = float('inf')\n",
     "    for move in get_available_moves(gamestate):\n",
     "        new_state = gamestate.copy()\n",
     "        new_state[move] = MIN_PLAYER\n",
-    "        value = min(value, max_move(new_state))\n",
-    "    return value\n",
-    "\n",
+    "        child_value, _ = max_move(new_state, alpha, beta)\n",
+    "        value = min(value, child_value)\n",
+    "        beta = min(beta, value)     # Beta aktualisieren\n",
+    "        if beta <= alpha:           # Pruning-Bedingung\n",
+    "            break\n",
+    "    return value, beta\n",
     "# Besten Zug für MAX ermitteln\n",
     "def minimax(gamestate):\n",
+    "\n",
+    "    increase_node_count()\n",
     "    alpha = -float('inf')\n",
     "    beta = float('inf')\n",
     "\n",
@@ -105,7 +124,7 @@
     "    for move in get_available_moves(gamestate):\n",
     "        new_state = gamestate.copy()\n",
     "        new_state[move] = MAX_PLAYER\n",
-    "        score = min_move(new_state)\n",
+    "        score,alpha = min_move(new_state,alpha,beta)\n",
     "        if score > best_value:\n",
     "            best_value = score\n",
     "            best_move = move\n",
@@ -115,14 +134,35 @@
     "# Beispiel: Minimax starten\n",
     "randomStartZug()\n",
     "printTTT(spieldfeld)\n",
-    "best = minimax(spieldfeld)\n",
+    "best = minimax(spieldfeld)S\n",
     "print(f\"MAX sollte auf Feld {best} setzen.\")\n",
     "spieldfeld[best] = MAX_PLAYER\n",
     "print(\"---\")\n",
     "printTTT(spieldfeld)\n",
     "print(f\"Node count: {node_count}\")\n"
    ],
-   "id": "11beb1a0725b04a1"
+   "id": "11beb1a0725b04a1",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 0\n",
+      "0 0 0\n",
+      "0 2 0\n",
+      "\n",
+      "Best Move: 1, Best Score: 0\n",
+      "MAX sollte auf Feld 1 setzen.\n",
+      "---\n",
+      "0 1 0\n",
+      "0 0 0\n",
+      "0 2 0\n",
+      "\n",
+      "Node count: 4982\n"
+     ]
+    }
+   ],
+   "execution_count": 6
   }
  ],
  "metadata": {
