restliche implementation und 3-5

--- a/Blatt3/Games 02 AB.ipynb
+++ b/Blatt3/Games 02 AB.ipynb
@@ -134,7 +134,7 @@
     "# Beispiel: Minimax starten\n",
     "randomStartZug()\n",
     "printTTT(spieldfeld)\n",
-    "best = minimax(spieldfeld)S\n",
+    "best = minimax(spieldfeld)\n",
     "print(f\"MAX sollte auf Feld {best} setzen.\")\n",
     "spieldfeld[best] = MAX_PLAYER\n",
     "print(\"---\")\n",
