--- a/Blatt 5/5_Min.ipynb
+++ b/Blatt 5/5_Min.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-12T12:16:36.371223Z",
-     "start_time": "2025-11-12T12:16:36.362221Z"
+     "end_time": "2025-11-12T12:39:53.683190Z",
+     "start_time": "2025-11-12T12:39:53.675532Z"
     }
    },
    "cell_type": "code",
@@ -17,14 +17,14 @@
     "\n",
     "mase = []\n",
     "xrange = 10\n",
-    "yrange = 6\n",
+    "yrange = 10\n",
     "for x in range(xrange):\n",
     "    for y in range(yrange):\n",
     "        mase.append((x, y))\n",
     "\n",
-    "berg = Objekt([4,5],mase,(0,0))\n",
+    "berg = Objekt([6,5],mase,(0,0))\n",
     "bar = Objekt([3,2],mase,(0,0))\n",
-    "eing = Objekt([1,1],mase,(5,0))\n",
+    "eing = Objekt([1,1],mase,(0,7))\n",
     "naus = Objekt([1,1],mase,(0,4))\n",
     "\n",
     "def printAllMase():\n",
@@ -105,26 +105,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Berg: (0, 0) [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (1, 0), (1, 1), (1, 2), (1, 3), (1, 4), (1, 5), (2, 0), (2, 1), (2, 2), (2, 3), (2, 4), (2, 5), (3, 0), (3, 1), (3, 2), (3, 3), (3, 4), (3, 5), (4, 0), (4, 1), (4, 2), (4, 3), (4, 4), (4, 5), (5, 0), (5, 1), (5, 2), (5, 3), (5, 4), (5, 5), (6, 0), (6, 1), (6, 2), (6, 3), (6, 4), (6, 5), (7, 0), (7, 1), (7, 2), (7, 3), (7, 4), (7, 5), (8, 0), (8, 1), (8, 2), (8, 3), (8, 4), (8, 5), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5)]\n",
-      "Bar: (0, 0) [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (1, 0), (1, 1), (1, 2), (1, 3), (1, 4), (1, 5), (2, 0), (2, 1), (2, 2), (2, 3), (2, 4), (2, 5), (3, 0), (3, 1), (3, 2), (3, 3), (3, 4), (3, 5), (4, 0), (4, 1), (4, 2), (4, 3), (4, 4), (4, 5), (5, 0), (5, 1), (5, 2), (5, 3), (5, 4), (5, 5), (6, 0), (6, 1), (6, 2), (6, 3), (6, 4), (6, 5), (7, 0), (7, 1), (7, 2), (7, 3), (7, 4), (7, 5), (8, 0), (8, 1), (8, 2), (8, 3), (8, 4), (8, 5), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5)]\n",
-      "Eing: (5, 0) [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (1, 0), (1, 5), (2, 0), (2, 5), (3, 0), (3, 5), (4, 0), (4, 5), (5, 0), (5, 5), (6, 0), (6, 5), (7, 0), (7, 5), (8, 0), (8, 5), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5)]\n",
-      "Naus: (0, 4) [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (1, 0), (1, 5), (2, 0), (2, 5), (3, 0), (3, 5), (4, 0), (4, 5), (5, 0), (5, 5), (6, 0), (6, 5), (7, 0), (7, 5), (8, 0), (8, 5), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5)]\n"
+      "Berg: (0, 0) [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (0, 6), (0, 7), (0, 8), (0, 9), (1, 0), (1, 1), (1, 2), (1, 3), (1, 4), (1, 5), (1, 6), (1, 7), (1, 8), (1, 9), (2, 0), (2, 1), (2, 2), (2, 3), (2, 4), (2, 5), (2, 6), (2, 7), (2, 8), (2, 9), (3, 0), (3, 1), (3, 2), (3, 3), (3, 4), (3, 5), (3, 6), (3, 7), (3, 8), (3, 9), (4, 0), (4, 1), (4, 2), (4, 3), (4, 4), (4, 5), (4, 6), (4, 7), (4, 8), (4, 9), (5, 0), (5, 1), (5, 2), (5, 3), (5, 4), (5, 5), (5, 6), (5, 7), (5, 8), (5, 9), (6, 0), (6, 1), (6, 2), (6, 3), (6, 4), (6, 5), (6, 6), (6, 7), (6, 8), (6, 9), (7, 0), (7, 1), (7, 2), (7, 3), (7, 4), (7, 5), (7, 6), (7, 7), (7, 8), (7, 9), (8, 0), (8, 1), (8, 2), (8, 3), (8, 4), (8, 5), (8, 6), (8, 7), (8, 8), (8, 9), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5), (9, 6), (9, 7), (9, 8), (9, 9)]\n",
+      "Bar: (0, 0) [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (0, 6), (0, 7), (0, 8), (0, 9), (1, 0), (1, 1), (1, 2), (1, 3), (1, 4), (1, 5), (1, 6), (1, 7), (1, 8), (1, 9), (2, 0), (2, 1), (2, 2), (2, 3), (2, 4), (2, 5), (2, 6), (2, 7), (2, 8), (2, 9), (3, 0), (3, 1), (3, 2), (3, 3), (3, 4), (3, 5), (3, 6), (3, 7), (3, 8), (3, 9), (4, 0), (4, 1), (4, 2), (4, 3), (4, 4), (4, 5), (4, 6), (4, 7), (4, 8), (4, 9), (5, 0), (5, 1), (5, 2), (5, 3), (5, 4), (5, 5), (5, 6), (5, 7), (5, 8), (5, 9), (6, 0), (6, 1), (6, 2), (6, 3), (6, 4), (6, 5), (6, 6), (6, 7), (6, 8), (6, 9), (7, 0), (7, 1), (7, 2), (7, 3), (7, 4), (7, 5), (7, 6), (7, 7), (7, 8), (7, 9), (8, 0), (8, 1), (8, 2), (8, 3), (8, 4), (8, 5), (8, 6), (8, 7), (8, 8), (8, 9), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5), (9, 6), (9, 7), (9, 8), (9, 9)]\n",
+      "Eing: (0, 7) [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (0, 6), (0, 7), (0, 8), (0, 9), (1, 0), (1, 9), (2, 0), (2, 9), (3, 0), (3, 9), (4, 0), (4, 9), (5, 0), (5, 9), (6, 0), (6, 9), (7, 0), (7, 9), (8, 0), (8, 9), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5), (9, 6), (9, 7), (9, 8), (9, 9)]\n",
+      "Naus: (0, 4) [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (0, 6), (0, 7), (0, 8), (0, 9), (1, 0), (1, 9), (2, 0), (2, 9), (3, 0), (3, 9), (4, 0), (4, 9), (5, 0), (5, 9), (6, 0), (6, 9), (7, 0), (7, 9), (8, 0), (8, 9), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5), (9, 6), (9, 7), (9, 8), (9, 9)]\n"
      ]
     }
    ],
-   "execution_count": 67
+   "execution_count": 154
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "This are all Valid positions, for the sake of simplicity, we arent going to do every position exact, the",
+   "source": "This are all Valid positions, for the sake of simplicity, we arent going to do every position exacty, we are setting up our entrance and from there trying to reduce the other ones, since the entrance and exit would be in a real world scenario set... as long its not a bilding plan... (the exit is not really included, at the end we simply check if hes in a valid position)",
    "id": "711b2a87ddac75bc"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "check if our current entrance pos is a valid pos, means if it is next to one of the 4 walls",
+   "id": "1a70f38a8b31b077"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-12T12:16:36.380787Z",
-     "start_time": "2025-11-12T12:16:36.377568Z"
+     "end_time": "2025-11-12T12:39:53.693026Z",
+     "start_time": "2025-11-12T12:39:53.690368Z"
     }
    },
    "cell_type": "code",
@@ -139,29 +145,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5, 0)\n",
+      "(0, 7)\n",
       "ist enthalten\n"
      ]
     }
    ],
-   "execution_count": 68
+   "execution_count": 155
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "davon ausgehend kann man jetzt z.b. die conflikte der bar, welche am meisten hat den wertebereich berechnen",
+   "source": "now we can start at bar, since its the object with most constrains, and remove all invalid positions, means, it has to be next to an entrance (were checking if it is min 1 square away later since we would iterate trough a lot here probably, depending on the start position",
    "id": "97bf69ab074f0b12"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-12T12:16:36.390764Z",
-     "start_time": "2025-11-12T12:16:36.388109Z"
+     "end_time": "2025-11-12T12:39:53.703562Z",
+     "start_time": "2025-11-12T12:39:53.700902Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "bar.moglichePos = valid_positions(bar, berg)  # nur Positionen, die direkt angrenzend an Berg sind\n",
+    "bar.moglichePos = valid_positions(bar, eing)  # nur Positions adjacent to the entrance, since our entrance is hard set\n",
     "printAllMase()\n"
    ],
    "id": "7d970fc121116767",
@@ -170,25 +176,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Berg: (0, 0) [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (1, 0), (1, 1), (1, 2), (1, 3), (1, 4), (1, 5), (2, 0), (2, 1), (2, 2), (2, 3), (2, 4), (2, 5), (3, 0), (3, 1), (3, 2), (3, 3), (3, 4), (3, 5), (4, 0), (4, 1), (4, 2), (4, 3), (4, 4), (4, 5), (5, 0), (5, 1), (5, 2), (5, 3), (5, 4), (5, 5), (6, 0), (6, 1), (6, 2), (6, 3), (6, 4), (6, 5), (7, 0), (7, 1), (7, 2), (7, 3), (7, 4), (7, 5), (8, 0), (8, 1), (8, 2), (8, 3), (8, 4), (8, 5), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5)]\n",
-      "Bar: (0, 0) [(5, 0), (5, 1), (5, 2), (5, 3), (5, 4)]\n",
-      "Eing: (5, 0) [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (1, 0), (1, 5), (2, 0), (2, 5), (3, 0), (3, 5), (4, 0), (4, 5), (5, 0), (5, 5), (6, 0), (6, 5), (7, 0), (7, 5), (8, 0), (8, 5), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5)]\n",
-      "Naus: (0, 4) [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (1, 0), (1, 5), (2, 0), (2, 5), (3, 0), (3, 5), (4, 0), (4, 5), (5, 0), (5, 5), (6, 0), (6, 5), (7, 0), (7, 5), (8, 0), (8, 5), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5)]\n"
+      "Berg: (0, 0) [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (0, 6), (0, 7), (0, 8), (0, 9), (1, 0), (1, 1), (1, 2), (1, 3), (1, 4), (1, 5), (1, 6), (1, 7), (1, 8), (1, 9), (2, 0), (2, 1), (2, 2), (2, 3), (2, 4), (2, 5), (2, 6), (2, 7), (2, 8), (2, 9), (3, 0), (3, 1), (3, 2), (3, 3), (3, 4), (3, 5), (3, 6), (3, 7), (3, 8), (3, 9), (4, 0), (4, 1), (4, 2), (4, 3), (4, 4), (4, 5), (4, 6), (4, 7), (4, 8), (4, 9), (5, 0), (5, 1), (5, 2), (5, 3), (5, 4), (5, 5), (5, 6), (5, 7), (5, 8), (5, 9), (6, 0), (6, 1), (6, 2), (6, 3), (6, 4), (6, 5), (6, 6), (6, 7), (6, 8), (6, 9), (7, 0), (7, 1), (7, 2), (7, 3), (7, 4), (7, 5), (7, 6), (7, 7), (7, 8), (7, 9), (8, 0), (8, 1), (8, 2), (8, 3), (8, 4), (8, 5), (8, 6), (8, 7), (8, 8), (8, 9), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5), (9, 6), (9, 7), (9, 8), (9, 9)]\n",
+      "Bar: (0, 0) [(0, 4), (0, 9), (2, 6), (2, 7)]\n",
+      "Eing: (0, 7) [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (0, 6), (0, 7), (0, 8), (0, 9), (1, 0), (1, 9), (2, 0), (2, 9), (3, 0), (3, 9), (4, 0), (4, 9), (5, 0), (5, 9), (6, 0), (6, 9), (7, 0), (7, 9), (8, 0), (8, 9), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5), (9, 6), (9, 7), (9, 8), (9, 9)]\n",
+      "Naus: (0, 4) [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (0, 6), (0, 7), (0, 8), (0, 9), (1, 0), (1, 9), (2, 0), (2, 9), (3, 0), (3, 9), (4, 0), (4, 9), (5, 0), (5, 9), (6, 0), (6, 9), (7, 0), (7, 9), (8, 0), (8, 9), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5), (9, 6), (9, 7), (9, 8), (9, 9)]\n"
      ]
     }
    ],
-   "execution_count": 69
+   "execution_count": 156
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-12T12:16:36.399270Z",
-     "start_time": "2025-11-12T12:16:36.395835Z"
+     "end_time": "2025-11-12T12:39:53.712809Z",
+     "start_time": "2025-11-12T12:39:53.709798Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "berg.moglichePos = valid_positions(berg, bar)\n",
+    "bar.moglichePos = valid_positions(berg, bar)\n",
     "printAllMase()"
    ],
    "id": "b8693364c0361934",
@@ -197,20 +203,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Berg: (0, 0) [(0, 3), (1, 3), (2, 3), (4, 0), (4, 1)]\n",
-      "Bar: (0, 0) [(5, 0), (5, 1), (5, 2), (5, 3), (5, 4)]\n",
-      "Eing: (5, 0) [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (1, 0), (1, 5), (2, 0), (2, 5), (3, 0), (3, 5), (4, 0), (4, 5), (5, 0), (5, 5), (6, 0), (6, 5), (7, 0), (7, 5), (8, 0), (8, 5), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5)]\n",
-      "Naus: (0, 4) [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (1, 0), (1, 5), (2, 0), (2, 5), (3, 0), (3, 5), (4, 0), (4, 5), (5, 0), (5, 5), (6, 0), (6, 5), (7, 0), (7, 5), (8, 0), (8, 5), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5)]\n"
+      "Berg: (0, 0) [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (0, 6), (0, 7), (0, 8), (0, 9), (1, 0), (1, 1), (1, 2), (1, 3), (1, 4), (1, 5), (1, 6), (1, 7), (1, 8), (1, 9), (2, 0), (2, 1), (2, 2), (2, 3), (2, 4), (2, 5), (2, 6), (2, 7), (2, 8), (2, 9), (3, 0), (3, 1), (3, 2), (3, 3), (3, 4), (3, 5), (3, 6), (3, 7), (3, 8), (3, 9), (4, 0), (4, 1), (4, 2), (4, 3), (4, 4), (4, 5), (4, 6), (4, 7), (4, 8), (4, 9), (5, 0), (5, 1), (5, 2), (5, 3), (5, 4), (5, 5), (5, 6), (5, 7), (5, 8), (5, 9), (6, 0), (6, 1), (6, 2), (6, 3), (6, 4), (6, 5), (6, 6), (6, 7), (6, 8), (6, 9), (7, 0), (7, 1), (7, 2), (7, 3), (7, 4), (7, 5), (7, 6), (7, 7), (7, 8), (7, 9), (8, 0), (8, 1), (8, 2), (8, 3), (8, 4), (8, 5), (8, 6), (8, 7), (8, 8), (8, 9), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5), (9, 6), (9, 7), (9, 8), (9, 9)]\n",
+      "Bar: (0, 0) [(0, 3), (1, 3), (2, 3), (4, 0), (4, 1)]\n",
+      "Eing: (0, 7) [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (0, 6), (0, 7), (0, 8), (0, 9), (1, 0), (1, 9), (2, 0), (2, 9), (3, 0), (3, 9), (4, 0), (4, 9), (5, 0), (5, 9), (6, 0), (6, 9), (7, 0), (7, 9), (8, 0), (8, 9), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5), (9, 6), (9, 7), (9, 8), (9, 9)]\n",
+      "Naus: (0, 4) [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (0, 6), (0, 7), (0, 8), (0, 9), (1, 0), (1, 9), (2, 0), (2, 9), (3, 0), (3, 9), (4, 0), (4, 9), (5, 0), (5, 9), (6, 0), (6, 9), (7, 0), (7, 9), (8, 0), (8, 9), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5), (9, 6), (9, 7), (9, 8), (9, 9)]\n"
      ]
     }
    ],
-   "execution_count": 70
+   "execution_count": 157
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "also looking good, now we can now start removing those positions where the minimum 1 square isnt met",
+   "id": "cecb16912cf04730"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-12T12:16:36.406842Z",
-     "start_time": "2025-11-12T12:16:36.404206Z"
+     "end_time": "2025-11-12T12:39:53.721131Z",
+     "start_time": "2025-11-12T12:39:53.718453Z"
     }
    },
    "cell_type": "code",
@@ -224,14 +236,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Berg: (0, 0) [(0, 3), (1, 3), (2, 3), (4, 0), (4, 1)]\n",
-      "Bar: (0, 0) [(5, 0), (5, 1), (5, 2), (5, 3), (5, 4)]\n",
-      "Eing: (5, 0) [(0, 3), (4, 0)]\n",
-      "Naus: (0, 4) [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (1, 0), (1, 5), (2, 0), (2, 5), (3, 0), (3, 5), (4, 0), (4, 5), (5, 0), (5, 5), (6, 0), (6, 5), (7, 0), (7, 5), (8, 0), (8, 5), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5)]\n"
+      "Berg: (0, 0) [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (0, 6), (0, 7), (0, 8), (0, 9), (1, 0), (1, 1), (1, 2), (1, 3), (1, 4), (1, 5), (1, 6), (1, 7), (1, 8), (1, 9), (2, 0), (2, 1), (2, 2), (2, 3), (2, 4), (2, 5), (2, 6), (2, 7), (2, 8), (2, 9), (3, 0), (3, 1), (3, 2), (3, 3), (3, 4), (3, 5), (3, 6), (3, 7), (3, 8), (3, 9), (4, 0), (4, 1), (4, 2), (4, 3), (4, 4), (4, 5), (4, 6), (4, 7), (4, 8), (4, 9), (5, 0), (5, 1), (5, 2), (5, 3), (5, 4), (5, 5), (5, 6), (5, 7), (5, 8), (5, 9), (6, 0), (6, 1), (6, 2), (6, 3), (6, 4), (6, 5), (6, 6), (6, 7), (6, 8), (6, 9), (7, 0), (7, 1), (7, 2), (7, 3), (7, 4), (7, 5), (7, 6), (7, 7), (7, 8), (7, 9), (8, 0), (8, 1), (8, 2), (8, 3), (8, 4), (8, 5), (8, 6), (8, 7), (8, 8), (8, 9), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5), (9, 6), (9, 7), (9, 8), (9, 9)]\n",
+      "Bar: (0, 0) [(0, 3), (1, 3), (2, 3), (4, 0), (4, 1)]\n",
+      "Eing: (0, 7) [(0, 3), (4, 0)]\n",
+      "Naus: (0, 4) [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (0, 6), (0, 7), (0, 8), (0, 9), (1, 0), (1, 9), (2, 0), (2, 9), (3, 0), (3, 9), (4, 0), (4, 9), (5, 0), (5, 9), (6, 0), (6, 9), (7, 0), (7, 9), (8, 0), (8, 9), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5), (9, 6), (9, 7), (9, 8), (9, 9)]\n"
      ]
     }
    ],
-   "execution_count": 71
+   "execution_count": 158
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-12T12:39:53.731213Z",
+     "start_time": "2025-11-12T12:39:53.728282Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "bar.moglichePos = non_adjacent_positions(bar, eing)\n",
+    "bar.moglichePos = non_adjacent_positions(bar, naus)\n",
+    "bar.moglichePos = non_adjacent_positions(bar, berg)\n",
+    "\n",
+    "berg.moglichePos = non_adjacent_positions(berg, bar)\n",
+    "berg.moglichePos = non_adjacent_positions(berg, naus)\n",
+    "berg.moglichePos = non_adjacent_positions(berg, eing)"
+   ],
+   "id": "2365f4695621829c",
+   "outputs": [],
+   "execution_count": 159
   },
   {
    "metadata": {},
@@ -242,8 +275,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-12T12:16:36.425748Z",
-     "start_time": "2025-11-12T12:16:36.422840Z"
+     "end_time": "2025-11-12T12:39:53.738914Z",
+     "start_time": "2025-11-12T12:39:53.736271Z"
     }
    },
    "cell_type": "code",
@@ -259,20 +292,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Berg: (0, 0) [(0, 3), (1, 3), (2, 3), (4, 0), (4, 1)]\n",
-      "Bar: (0, 0) [(5, 0), (5, 1), (5, 2), (5, 3), (5, 4)]\n",
-      "Eing: (5, 0) [(0, 3), (4, 0)]\n",
-      "Naus: (0, 4) [(0, 0), (0, 1), (0, 2), (0, 4), (0, 5), (1, 0), (1, 5), (2, 0), (2, 5), (3, 5), (4, 5), (5, 5), (6, 0), (6, 5), (7, 5), (8, 0), (8, 5), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5)]\n"
+      "Berg: (0, 0) [(0, 0), (0, 2), (0, 4), (0, 5), (0, 7), (0, 8), (1, 0), (1, 1), (1, 2), (1, 4), (1, 5), (1, 6), (1, 7), (1, 8), (1, 9), (2, 8), (2, 9), (3, 0), (3, 1), (3, 2), (3, 3), (3, 4), (3, 5), (3, 6), (3, 7), (3, 8), (3, 9), (4, 2), (4, 3), (4, 4), (4, 5), (4, 6), (4, 7), (4, 8), (4, 9), (5, 0), (5, 1), (5, 2), (5, 3), (5, 4), (5, 5), (5, 6), (5, 7), (5, 8), (5, 9), (6, 0), (6, 1), (6, 2), (6, 3), (6, 4), (6, 5), (6, 6), (6, 7), (6, 8), (6, 9), (7, 0), (7, 1), (7, 2), (7, 3), (7, 4), (7, 5), (7, 6), (7, 7), (7, 8), (7, 9), (8, 0), (8, 1), (8, 2), (8, 3), (8, 4), (8, 5), (8, 6), (8, 7), (8, 8), (8, 9), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5), (9, 6), (9, 7), (9, 8), (9, 9)]\n",
+      "Bar: (0, 0) [(0, 3), (1, 3), (4, 0), (4, 1)]\n",
+      "Eing: (0, 7) [(0, 3), (4, 0)]\n",
+      "Naus: (0, 4) [(0, 0), (0, 1), (0, 2), (0, 4), (0, 7), (0, 8), (1, 0), (1, 9), (2, 0), (2, 9), (3, 0), (3, 9), (4, 9), (5, 0), (5, 9), (6, 0), (6, 9), (7, 9), (8, 0), (8, 9), (9, 0), (9, 1), (9, 2), (9, 3), (9, 4), (9, 5), (9, 6), (9, 7), (9, 8), (9, 9)]\n"
      ]
     }
    ],
-   "execution_count": 72
+   "execution_count": 160
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-12T12:16:36.441552Z",
-     "start_time": "2025-11-12T12:16:36.438385Z"
+     "end_time": "2025-11-12T12:39:53.750925Z",
+     "start_time": "2025-11-12T12:39:53.747270Z"
     }
    },
    "cell_type": "code",
@@ -287,7 +320,7 @@
      ]
     }
    ],
-   "execution_count": 73
+   "execution_count": 161
   }
  ],
  "metadata": {
