--- a/Blatt 5/5 rock bottom/5_CSP.ipynb
+++ b/Blatt 5/5 rock bottom/5_CSP.ipynb
@@ -11,6 +11,9 @@
     }
    },
    "source": [
+    "from random import randint, random\n",
+    "\n",
+    "\n",
     "class Objekt:\n",
     "    def __init__(self,  mas,pos):\n",
     "        self.mas = mas\n",
@@ -23,10 +26,13 @@
     "    for y in range(yrange):\n",
     "        mase.append((x, y))\n",
     "\n",
-    "berg = Objekt([4,5],mase)\n",
-    "bar = Objekt([3,2],mase)\n",
-    "eing = Objekt([1,1],mase)\n",
-    "naus = Objekt([1,1],mase)\n",
+    "def getRandomPos(o:Objekt):\n",
+    "    o.pos = random.choice(mase)\n",
+    "\n",
+    "berg = Objekt([0,0],mase)\n",
+    "bar = Objekt([0,0],mase)\n",
+    "eing = Objekt([0,0],mase)\n",
+    "naus = Objekt([0,0],mase)\n",
     "\n",
     "def printAllMase():\n",
     "    print(f\"Berg: {berg.pos}\")\n",
