--- a/Blatt 5/2/2.ipynb
+++ b/Blatt 5/2/2.ipynb
@@ -56,18 +56,23 @@
    "id": "36647a96e8c53d9f"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-14T11:50:04.911165Z",
+     "start_time": "2025-11-14T11:50:04.902786Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "from enum import Enum\n",
+    "\n",
     "class Farbe(Enum):\n",
     "    ROT = \"rot\"\n",
     "    GRUEN = \"grün\"\n",
     "    WEISS = \"weiß\"\n",
     "    BLAU = \"blau\"\n",
     "    GELB = \"gelb\"\n",
+    "alleFarben = [Farbe.ROT, Farbe.GRUEN,Farbe.WEISS,Farbe.BLAU,Farbe.GELB]\n",
     "\n",
     "class Nationalitaet(Enum):\n",
     "    ENGLAENDER = \"Engländer\"\n",
@@ -75,6 +80,7 @@
     "    SPANIER = \"Spanier\"\n",
     "    NORWEGER = \"Norweger\"\n",
     "    JAPANER = \"Japaner\"\n",
+    "alleNationalitaten = [Nationalitaet.ENGLAENDER, Nationalitaet.UKRAINER,Nationalitaet.SPANIER,Nationalitaet.NORWEGER,Nationalitaet.JAPANER]\n",
     "\n",
     "class Getraenk(Enum):\n",
     "    TEE = \"Tee\"\n",
@@ -82,6 +88,7 @@
     "    MILCH = \"Milch\"\n",
     "    ORANGENSAFT = \"Orangensaft\"\n",
     "    WASSER = \"Wasser\"\n",
+    "alleGetranke = [Getraenk.TEE,Getraenk.KAFFEE,Getraenk.MILCH,Getraenk.ORANGENSAFT,Getraenk.WASSER]\n",
     "\n",
     "class Zigarette(Enum):\n",
     "    KOOLS = \"Kools\"\n",
@@ -89,21 +96,25 @@
     "    PARLIAMENTS = \"Parliaments\"\n",
     "    CHESFIELD = \"Chesfield\"\n",
     "    OLD_GOLD = \"Old_Gold\"\n",
+    "alleZigaretten = [Zigarette.KOOLS,Zigarette.LUCKY,Zigarette.PARLIAMENTS,Zigarette.CHESFIELD,Zigarette.OLD_GOLD]\n",
     "\n",
     "class Tier(Enum):\n",
     "    ZEBRA = \"Zebra\"\n",
     "    HUND = \"Hund\"\n",
     "    SCHNECKE = \"Schnecke\"\n",
     "    PFERDE = \"Pferde\"\n",
-    "    FUCHS = \"Fuchs\""
+    "    FUCHS = \"Fuchs\"\n",
+    "alleTiere = [Tier.ZEBRA,Tier.HUND,Tier.SCHNECKE,Tier.PFERDE,Tier.FUCHS]"
    ],
-   "id": "f3999798472a3b30"
+   "id": "f3999798472a3b30",
+   "outputs": [],
+   "execution_count": 71
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T15:40:05.921297Z",
-     "start_time": "2025-11-10T15:40:05.915416Z"
+     "end_time": "2025-11-14T11:50:04.935579Z",
+     "start_time": "2025-11-14T11:50:04.921596Z"
     }
    },
    "cell_type": "code",
@@ -129,67 +140,91 @@
     "        return f\"Haus(farbe={self.farbe}, nat={self.nationalitaet}, getr={self.getraenk}, zig={self.zigarette}, tier={self.tier})\"\n",
     "\n",
     "#häuser erstellen\n",
-    "haeuser = [Haus() for _ in range(5)]\n",
+    "haeuser = [Haus() for _ in range(5)] #haus 1 = index 1\n",
+    "\n",
+    "\n",
+    "def alleWerteHinzufügen():\n",
+    "    for haus in haeuser:\n",
+    "        haus.farbe = alleFarben\n",
+    "        haus.tier = alleTiere\n",
+    "        haus.getraenk = alleGetranke\n",
+    "        haus.zigarette = alleZigaretten\n",
+    "        haus.nationalitaet = alleNationalitaten\n",
     "\n",
     "#constrains:\n",
-    "\n",
-    "# Unäre und binäre Constraints innerhalb eines Hauses\n",
-    "def c1(haus):\n",
-    "    # Der Engländer wohnt im roten Haus\n",
-    "    if haus.farbe is None or haus.nationalitaet is None:\n",
-    "        return True\n",
-    "    return haus.farbe == Farbe.ROT and haus.nationalitaet == Nationalitaet.ENGLAENDER\n",
-    "\n",
-    "def c2(haus):\n",
-    "    # Der Spanier hat einen Hund\n",
-    "    if haus.nationalitaet is None or haus.tier is None:\n",
-    "        return True\n",
-    "    return haus.nationalitaet == Nationalitaet.SPANIER and haus.tier == Tier.HUND\n",
-    "\n",
-    "def c3(haus):\n",
-    "    # Kaffee wird im grünen Haus getrunken\n",
-    "    if haus.getraenk is None or haus.farbe is None:\n",
-    "        return True\n",
-    "    return haus.getraenk == Getraenk.KAFFEE and haus.farbe == Farbe.GRUEN\n",
-    "\n",
-    "def c4(haus):\n",
-    "    # Der Ukrainer trinkt Tee\n",
-    "    if haus.nationalitaet is None or haus.getraenk is None:\n",
-    "        return True\n",
-    "    return haus.nationalitaet == Nationalitaet.UKRAINER and haus.getraenk == Getraenk.TEE\n",
-    "\n",
-    "def c5(haus):\n",
-    "    # Old-Gold-Raucher hat Schnecken\n",
-    "    if haus.zigarette is None or haus.tier is None:\n",
-    "        return True\n",
-    "    return haus.zigarette == Zigarette.OLD_GOLD and haus.tier == Tier.SCHNECKE\n",
-    "\n",
-    "def c6(haus):\n",
-    "    # Kools im gelben Haus\n",
-    "    if haus.zigarette is None or haus.farbe is None:\n",
-    "        return True\n",
-    "    return haus.zigarette == Zigarette.KOOLS and haus.farbe == Farbe.GELB\n",
-    "\n",
-    "def c7(haus):\n",
-    "    # Lucky trinkt Orangensaft\n",
-    "    if haus.zigarette is None or haus.getraenk is None:\n",
-    "        return True\n",
-    "    return haus.zigarette == Zigarette.LUCKY and haus.getraenk == Getraenk.ORANGENSAFT\n",
-    "\n",
-    "def c8(haus):\n",
-    "    # Japaner raucht Parliaments\n",
-    "    if haus.nationalitaet is None or haus.zigarette is None:\n",
-    "        return True\n",
-    "    return haus.nationalitaet == Nationalitaet.JAPANER and haus.zigarette == Zigarette.PARLIAMENTS\n",
     "\n",
     "# Unäre Constraints für bestimmte Positionen\n",
     "def c9(haeuser):\n",
     "    # Milch im mittleren Haus (Haus 3, Index 2)\n",
-    "    return haeuser[2].getraenk == Getraenk.MILCH\n",
+    "    for i, haus in enumerate(haeuser, 1):\n",
+    "        if i == 3:\n",
+    "            haus.getraenk = Getraenk.MILCH\n",
     "\n",
     "def c10(haeuser):\n",
     "    # Norweger im ersten Haus (Haus 1, Index 0)\n",
-    "    return haeuser[0].nationalitaet == Nationalitaet.NORWEGER\n",
+    "    for i, haus in enumerate(haeuser,1):\n",
+    "        if i == 1:\n",
+    "            haus.nationalitaet = Nationalitaet.NORWEGER\n",
+    "\n",
+    "\n",
+    "def c1(haus):\n",
+    "    # Der Engländer wohnt im roten Haus\n",
+    "    if haus.farbe == Farbe.ROT:\n",
+    "        haus.nationalitaet = Nationalitaet.ENGLAENDER\n",
+    "    elif haus.nationalitaet == Nationalitaet.ENGLAENDER:\n",
+    "        haus.farbe = Farbe.ROT\n",
+    "\n",
+    "\n",
+    "def c2(haus):\n",
+    "    # Der Spanier hat einen Hund\n",
+    "    if haus.nationalitaet == Nationalitaet.SPANIER:\n",
+    "        haus.tier = Tier.HUND\n",
+    "    elif haus.tier == Tier.HUND:\n",
+    "        haus.nationalitaet = Nationalitaet.SPANIER\n",
+    "\n",
+    "def c3(haus):\n",
+    "    # Kaffee wird im grünen Haus getrunken\n",
+    "    if haus.getraenk == Getraenk.KAFFEE:\n",
+    "        haus.farbe = Farbe.GRUEN\n",
+    "    elif haus.farbe == Farbe.GRUEN:\n",
+    "        haus.getraenk = Getraenk.KAFFEE\n",
+    "\n",
+    "def c4(haus):\n",
+    "    # Der Ukrainer trinkt Tee\n",
+    "    if haus.nationalitaet == Nationalitaet.UKRAINER:\n",
+    "        haus.getraenk = Getraenk.TEE\n",
+    "    elif haus.getraenk == Getraenk.TEE:\n",
+    "        haus.nationalitaet = Nationalitaet.UKRAINER\n",
+    "\n",
+    "def c5(haus):\n",
+    "    # Old-Gold-Raucher hat Schnecken\n",
+    "    if haus.zigarette == Zigarette.OLD_GOLD:\n",
+    "        haus.tier = Tier.SCHNECKE\n",
+    "    elif haus.tier == Tier.SCHNECKE:\n",
+    "        haus.zigarette = Zigarette.OLD_GOLD\n",
+    "\n",
+    "def c6(haus):\n",
+    "    # Kools im gelben Haus\n",
+    "    if haus.zigarette == Zigarette.KOOLS:\n",
+    "        haus.farbe = Farbe.GELB\n",
+    "    elif haus.farbe == Farbe.GELB:\n",
+    "        haus.zigarette = Zigarette.KOOLS\n",
+    "\n",
+    "def c7(haus):\n",
+    "    # Lucky trinkt Orangensaft\n",
+    "    if haus.zigarette == Zigarette.LUCKY:\n",
+    "        haus.getraenk = Getraenk.ORANGENSAFT\n",
+    "    elif haus.getraenk == Getraenk.ORANGENSAFT:\n",
+    "        haus.zigarette = Zigarette.LUCKY\n",
+    "\n",
+    "def c8(haus):\n",
+    "    # Japaner raucht Parliaments\n",
+    "    if haus.nationalitaet == Nationalitaet.JAPANER:\n",
+    "        haus.zigarette = Zigarette.PARLIAMENTS\n",
+    "    elif haus.zigarette == Zigarette.PARLIAMENTS:\n",
+    "        haus.nationalitaet = Nationalitaet.JAPANER\n",
+    "\n",
+    "#binär\n",
     "\n",
     "# Nachbarschafts-Constraints zwischen Häusern\n",
     "def c11(haeuser):\n",
@@ -231,31 +266,15 @@
     "            return left or right\n",
     "    return True\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "# Test-Ausgabe\n",
     "def printHäuser():\n",
     "    for i, haus in enumerate(haeuser, 1):\n",
-    "        print(f\"Haus {i}: {haus}\")\n",
+    "        print(f\"Haus {i}: {haus}\\n\")\n",
     "\n"
    ],
    "id": "29a60bbcc6b84d45",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Haus 1: Haus(farbe=None, nat=None, getr=None, zig=None, tier=None)\n",
-      "Haus 2: Haus(farbe=None, nat=None, getr=None, zig=None, tier=None)\n",
-      "Haus 3: Haus(farbe=None, nat=None, getr=None, zig=None, tier=None)\n",
-      "Haus 4: Haus(farbe=None, nat=None, getr=None, zig=None, tier=None)\n",
-      "Haus 5: Haus(farbe=None, nat=None, getr=None, zig=None, tier=None)\n"
-     ]
-    }
-   ],
-   "execution_count": 3
+   "outputs": [],
+   "execution_count": 72
   },
   {
    "metadata": {},
@@ -264,12 +283,106 @@
    "id": "e8221c53a4f3915f"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-14T11:50:04.948424Z",
+     "start_time": "2025-11-14T11:50:04.944320Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "for haus in haeuser:\n",
-   "id": "d7f27bc28dfafb89"
+   "source": [
+    "alleWerteHinzufügen()\n",
+    "printHäuser()"
+   ],
+   "id": "294b4883fdf663e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Haus 1: Haus(farbe=[<Farbe.ROT: 'rot'>, <Farbe.GRUEN: 'grün'>, <Farbe.WEISS: 'weiß'>, <Farbe.BLAU: 'blau'>, <Farbe.GELB: 'gelb'>], nat=[<Nationalitaet.ENGLAENDER: 'Engländer'>, <Nationalitaet.UKRAINER: 'Ukrainer'>, <Nationalitaet.SPANIER: 'Spanier'>, <Nationalitaet.NORWEGER: 'Norweger'>, <Nationalitaet.JAPANER: 'Japaner'>], getr=[<Getraenk.TEE: 'Tee'>, <Getraenk.KAFFEE: 'Kaffee'>, <Getraenk.MILCH: 'Milch'>, <Getraenk.ORANGENSAFT: 'Orangensaft'>, <Getraenk.WASSER: 'Wasser'>], zig=[<Zigarette.KOOLS: 'Kools'>, <Zigarette.LUCKY: 'Lucky'>, <Zigarette.PARLIAMENTS: 'Parliaments'>, <Zigarette.CHESFIELD: 'Chesfield'>, <Zigarette.OLD_GOLD: 'Old_Gold'>], tier=[<Tier.ZEBRA: 'Zebra'>, <Tier.HUND: 'Hund'>, <Tier.SCHNECKE: 'Schnecke'>, <Tier.PFERDE: 'Pferde'>, <Tier.FUCHS: 'Fuchs'>])\n",
+      "\n",
+      "Haus 2: Haus(farbe=[<Farbe.ROT: 'rot'>, <Farbe.GRUEN: 'grün'>, <Farbe.WEISS: 'weiß'>, <Farbe.BLAU: 'blau'>, <Farbe.GELB: 'gelb'>], nat=[<Nationalitaet.ENGLAENDER: 'Engländer'>, <Nationalitaet.UKRAINER: 'Ukrainer'>, <Nationalitaet.SPANIER: 'Spanier'>, <Nationalitaet.NORWEGER: 'Norweger'>, <Nationalitaet.JAPANER: 'Japaner'>], getr=[<Getraenk.TEE: 'Tee'>, <Getraenk.KAFFEE: 'Kaffee'>, <Getraenk.MILCH: 'Milch'>, <Getraenk.ORANGENSAFT: 'Orangensaft'>, <Getraenk.WASSER: 'Wasser'>], zig=[<Zigarette.KOOLS: 'Kools'>, <Zigarette.LUCKY: 'Lucky'>, <Zigarette.PARLIAMENTS: 'Parliaments'>, <Zigarette.CHESFIELD: 'Chesfield'>, <Zigarette.OLD_GOLD: 'Old_Gold'>], tier=[<Tier.ZEBRA: 'Zebra'>, <Tier.HUND: 'Hund'>, <Tier.SCHNECKE: 'Schnecke'>, <Tier.PFERDE: 'Pferde'>, <Tier.FUCHS: 'Fuchs'>])\n",
+      "\n",
+      "Haus 3: Haus(farbe=[<Farbe.ROT: 'rot'>, <Farbe.GRUEN: 'grün'>, <Farbe.WEISS: 'weiß'>, <Farbe.BLAU: 'blau'>, <Farbe.GELB: 'gelb'>], nat=[<Nationalitaet.ENGLAENDER: 'Engländer'>, <Nationalitaet.UKRAINER: 'Ukrainer'>, <Nationalitaet.SPANIER: 'Spanier'>, <Nationalitaet.NORWEGER: 'Norweger'>, <Nationalitaet.JAPANER: 'Japaner'>], getr=[<Getraenk.TEE: 'Tee'>, <Getraenk.KAFFEE: 'Kaffee'>, <Getraenk.MILCH: 'Milch'>, <Getraenk.ORANGENSAFT: 'Orangensaft'>, <Getraenk.WASSER: 'Wasser'>], zig=[<Zigarette.KOOLS: 'Kools'>, <Zigarette.LUCKY: 'Lucky'>, <Zigarette.PARLIAMENTS: 'Parliaments'>, <Zigarette.CHESFIELD: 'Chesfield'>, <Zigarette.OLD_GOLD: 'Old_Gold'>], tier=[<Tier.ZEBRA: 'Zebra'>, <Tier.HUND: 'Hund'>, <Tier.SCHNECKE: 'Schnecke'>, <Tier.PFERDE: 'Pferde'>, <Tier.FUCHS: 'Fuchs'>])\n",
+      "\n",
+      "Haus 4: Haus(farbe=[<Farbe.ROT: 'rot'>, <Farbe.GRUEN: 'grün'>, <Farbe.WEISS: 'weiß'>, <Farbe.BLAU: 'blau'>, <Farbe.GELB: 'gelb'>], nat=[<Nationalitaet.ENGLAENDER: 'Engländer'>, <Nationalitaet.UKRAINER: 'Ukrainer'>, <Nationalitaet.SPANIER: 'Spanier'>, <Nationalitaet.NORWEGER: 'Norweger'>, <Nationalitaet.JAPANER: 'Japaner'>], getr=[<Getraenk.TEE: 'Tee'>, <Getraenk.KAFFEE: 'Kaffee'>, <Getraenk.MILCH: 'Milch'>, <Getraenk.ORANGENSAFT: 'Orangensaft'>, <Getraenk.WASSER: 'Wasser'>], zig=[<Zigarette.KOOLS: 'Kools'>, <Zigarette.LUCKY: 'Lucky'>, <Zigarette.PARLIAMENTS: 'Parliaments'>, <Zigarette.CHESFIELD: 'Chesfield'>, <Zigarette.OLD_GOLD: 'Old_Gold'>], tier=[<Tier.ZEBRA: 'Zebra'>, <Tier.HUND: 'Hund'>, <Tier.SCHNECKE: 'Schnecke'>, <Tier.PFERDE: 'Pferde'>, <Tier.FUCHS: 'Fuchs'>])\n",
+      "\n",
+      "Haus 5: Haus(farbe=[<Farbe.ROT: 'rot'>, <Farbe.GRUEN: 'grün'>, <Farbe.WEISS: 'weiß'>, <Farbe.BLAU: 'blau'>, <Farbe.GELB: 'gelb'>], nat=[<Nationalitaet.ENGLAENDER: 'Engländer'>, <Nationalitaet.UKRAINER: 'Ukrainer'>, <Nationalitaet.SPANIER: 'Spanier'>, <Nationalitaet.NORWEGER: 'Norweger'>, <Nationalitaet.JAPANER: 'Japaner'>], getr=[<Getraenk.TEE: 'Tee'>, <Getraenk.KAFFEE: 'Kaffee'>, <Getraenk.MILCH: 'Milch'>, <Getraenk.ORANGENSAFT: 'Orangensaft'>, <Getraenk.WASSER: 'Wasser'>], zig=[<Zigarette.KOOLS: 'Kools'>, <Zigarette.LUCKY: 'Lucky'>, <Zigarette.PARLIAMENTS: 'Parliaments'>, <Zigarette.CHESFIELD: 'Chesfield'>, <Zigarette.OLD_GOLD: 'Old_Gold'>], tier=[<Tier.ZEBRA: 'Zebra'>, <Tier.HUND: 'Hund'>, <Tier.SCHNECKE: 'Schnecke'>, <Tier.PFERDE: 'Pferde'>, <Tier.FUCHS: 'Fuchs'>])\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 73
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Unäre Constrains als erstes:",
+   "id": "1a035185fc6a46a8"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-14T11:50:04.984894Z",
+     "start_time": "2025-11-14T11:50:04.979846Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def useConstrainOnAll(haeuser, constrain):\n",
+    "    for i, haus in enumerate(haeuser, 1):\n",
+    "        result = constrain(haus)\n",
+    "\n",
+    "c9(haeuser)\n",
+    "c10(haeuser)\n",
+    "\n",
+    "def useAllUnärConstrains(haeuser):\n",
+    "    useConstrainOnAll(haeuser,c1)\n",
+    "    useConstrainOnAll(haeuser,c2)\n",
+    "    useConstrainOnAll(haeuser,c3)\n",
+    "    useConstrainOnAll(haeuser,c4)\n",
+    "    useConstrainOnAll(haeuser,c5)\n",
+    "    useConstrainOnAll(haeuser,c6)\n",
+    "    useConstrainOnAll(haeuser,c7)\n",
+    "    useConstrainOnAll(haeuser,c8)\n",
+    "\n",
+    "def useAllBinConstrains(haeuser):\n",
+    "    c11(haeuser)\n",
+    "    c12(haeuser)\n",
+    "    c13(haeuser)\n",
+    "    c14(haeuser)\n",
+    "\n",
+    "\n",
+    "useAllUnärConstrains(haeuser)\n",
+    "useAllBinConstrains(haeuser)\n",
+    "\n",
+    "for i in range(5):\n",
+    "    useAllUnärConstrains(haeuser)\n",
+    "    useAllBinConstrains(haeuser)\n",
+    "\n",
+    "printHäuser()"
+   ],
+   "id": "d4301465b9c52648",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Haus 1: Haus(farbe=[<Farbe.ROT: 'rot'>, <Farbe.GRUEN: 'grün'>, <Farbe.WEISS: 'weiß'>, <Farbe.BLAU: 'blau'>, <Farbe.GELB: 'gelb'>], nat=Nationalitaet.NORWEGER, getr=[<Getraenk.TEE: 'Tee'>, <Getraenk.KAFFEE: 'Kaffee'>, <Getraenk.MILCH: 'Milch'>, <Getraenk.ORANGENSAFT: 'Orangensaft'>, <Getraenk.WASSER: 'Wasser'>], zig=[<Zigarette.KOOLS: 'Kools'>, <Zigarette.LUCKY: 'Lucky'>, <Zigarette.PARLIAMENTS: 'Parliaments'>, <Zigarette.CHESFIELD: 'Chesfield'>, <Zigarette.OLD_GOLD: 'Old_Gold'>], tier=[<Tier.ZEBRA: 'Zebra'>, <Tier.HUND: 'Hund'>, <Tier.SCHNECKE: 'Schnecke'>, <Tier.PFERDE: 'Pferde'>, <Tier.FUCHS: 'Fuchs'>])\n",
+      "\n",
+      "Haus 2: Haus(farbe=[<Farbe.ROT: 'rot'>, <Farbe.GRUEN: 'grün'>, <Farbe.WEISS: 'weiß'>, <Farbe.BLAU: 'blau'>, <Farbe.GELB: 'gelb'>], nat=[<Nationalitaet.ENGLAENDER: 'Engländer'>, <Nationalitaet.UKRAINER: 'Ukrainer'>, <Nationalitaet.SPANIER: 'Spanier'>, <Nationalitaet.NORWEGER: 'Norweger'>, <Nationalitaet.JAPANER: 'Japaner'>], getr=[<Getraenk.TEE: 'Tee'>, <Getraenk.KAFFEE: 'Kaffee'>, <Getraenk.MILCH: 'Milch'>, <Getraenk.ORANGENSAFT: 'Orangensaft'>, <Getraenk.WASSER: 'Wasser'>], zig=[<Zigarette.KOOLS: 'Kools'>, <Zigarette.LUCKY: 'Lucky'>, <Zigarette.PARLIAMENTS: 'Parliaments'>, <Zigarette.CHESFIELD: 'Chesfield'>, <Zigarette.OLD_GOLD: 'Old_Gold'>], tier=[<Tier.ZEBRA: 'Zebra'>, <Tier.HUND: 'Hund'>, <Tier.SCHNECKE: 'Schnecke'>, <Tier.PFERDE: 'Pferde'>, <Tier.FUCHS: 'Fuchs'>])\n",
+      "\n",
+      "Haus 3: Haus(farbe=[<Farbe.ROT: 'rot'>, <Farbe.GRUEN: 'grün'>, <Farbe.WEISS: 'weiß'>, <Farbe.BLAU: 'blau'>, <Farbe.GELB: 'gelb'>], nat=[<Nationalitaet.ENGLAENDER: 'Engländer'>, <Nationalitaet.UKRAINER: 'Ukrainer'>, <Nationalitaet.SPANIER: 'Spanier'>, <Nationalitaet.NORWEGER: 'Norweger'>, <Nationalitaet.JAPANER: 'Japaner'>], getr=Getraenk.MILCH, zig=[<Zigarette.KOOLS: 'Kools'>, <Zigarette.LUCKY: 'Lucky'>, <Zigarette.PARLIAMENTS: 'Parliaments'>, <Zigarette.CHESFIELD: 'Chesfield'>, <Zigarette.OLD_GOLD: 'Old_Gold'>], tier=[<Tier.ZEBRA: 'Zebra'>, <Tier.HUND: 'Hund'>, <Tier.SCHNECKE: 'Schnecke'>, <Tier.PFERDE: 'Pferde'>, <Tier.FUCHS: 'Fuchs'>])\n",
+      "\n",
+      "Haus 4: Haus(farbe=[<Farbe.ROT: 'rot'>, <Farbe.GRUEN: 'grün'>, <Farbe.WEISS: 'weiß'>, <Farbe.BLAU: 'blau'>, <Farbe.GELB: 'gelb'>], nat=[<Nationalitaet.ENGLAENDER: 'Engländer'>, <Nationalitaet.UKRAINER: 'Ukrainer'>, <Nationalitaet.SPANIER: 'Spanier'>, <Nationalitaet.NORWEGER: 'Norweger'>, <Nationalitaet.JAPANER: 'Japaner'>], getr=[<Getraenk.TEE: 'Tee'>, <Getraenk.KAFFEE: 'Kaffee'>, <Getraenk.MILCH: 'Milch'>, <Getraenk.ORANGENSAFT: 'Orangensaft'>, <Getraenk.WASSER: 'Wasser'>], zig=[<Zigarette.KOOLS: 'Kools'>, <Zigarette.LUCKY: 'Lucky'>, <Zigarette.PARLIAMENTS: 'Parliaments'>, <Zigarette.CHESFIELD: 'Chesfield'>, <Zigarette.OLD_GOLD: 'Old_Gold'>], tier=[<Tier.ZEBRA: 'Zebra'>, <Tier.HUND: 'Hund'>, <Tier.SCHNECKE: 'Schnecke'>, <Tier.PFERDE: 'Pferde'>, <Tier.FUCHS: 'Fuchs'>])\n",
+      "\n",
+      "Haus 5: Haus(farbe=[<Farbe.ROT: 'rot'>, <Farbe.GRUEN: 'grün'>, <Farbe.WEISS: 'weiß'>, <Farbe.BLAU: 'blau'>, <Farbe.GELB: 'gelb'>], nat=[<Nationalitaet.ENGLAENDER: 'Engländer'>, <Nationalitaet.UKRAINER: 'Ukrainer'>, <Nationalitaet.SPANIER: 'Spanier'>, <Nationalitaet.NORWEGER: 'Norweger'>, <Nationalitaet.JAPANER: 'Japaner'>], getr=[<Getraenk.TEE: 'Tee'>, <Getraenk.KAFFEE: 'Kaffee'>, <Getraenk.MILCH: 'Milch'>, <Getraenk.ORANGENSAFT: 'Orangensaft'>, <Getraenk.WASSER: 'Wasser'>], zig=[<Zigarette.KOOLS: 'Kools'>, <Zigarette.LUCKY: 'Lucky'>, <Zigarette.PARLIAMENTS: 'Parliaments'>, <Zigarette.CHESFIELD: 'Chesfield'>, <Zigarette.OLD_GOLD: 'Old_Gold'>], tier=[<Tier.ZEBRA: 'Zebra'>, <Tier.HUND: 'Hund'>, <Tier.SCHNECKE: 'Schnecke'>, <Tier.PFERDE: 'Pferde'>, <Tier.FUCHS: 'Fuchs'>])\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 74
   }
  ],
  "metadata": {
